syntax = "proto3";

package acvm.brillig;

message BrilligBytecode {}